--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,10 +130,10 @@ header nav ul li a:hover {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* surfreport */
+/* Movie Finder */
 
-.surfreport {
-  background-image: url("../imgs/surfreport.jpg ");
+.movieFinder {
+  background-image: url("../imgs/moviefinder.png ");
   background-size: cover;
   background-position: center;
   align-items: center;
@@ -144,7 +144,7 @@ header nav ul li a:hover {
   width: auto;
   margin: auto;
 }
-.surfreport h3 {
+.movieFinder h3 {
   text-shadow: 1px 0 0 #000, 0 -1px #000, 1px 0 0 #000, 0 -1px #000;
   display: block;
   justify-content: center;
@@ -153,7 +153,7 @@ header nav ul li a:hover {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 3px;
 }
-.surfreport:hover {
+.movieFinder:hover {
   opacity: 0.9;
   transition: 0.3s;
 }
